tests/files/lexer_tests/should_fail/042.cmdr
/* alias bad syntax
    expected: = <command>*/
alias myCommand